--- a/css/style.css
+++ b/css/style.css
@@ -107,3 +107,66 @@ a {
     margin: 0;
 }
 
+/*оформление*/
+
+.wrap {
+    margin: 0 140px;
+}
+
+.main-header {
+    background-color: #eeeeee;
+}
+
+.navigation-list {
+    padding-left: 60px;
+    padding-top: 25px;
+}
+
+.navigation-item a {
+    color: #000000;
+    font-size: 16px;
+    line-height: 30px;
+}
+
+.basket {
+    margin-left: 110px;
+    padding-left: 60px;
+    padding-top: 25px;
+    color: #000000;
+    font-size: 16px;
+    line-height: 30px;
+}
+
+
+.promo {
+   background-color: #eeeeee;
+    padding-top: 50px;
+}
+
+.features-description {
+    width: 260px;
+}
+
+.features-left {
+}
+
+.features-left .features-image {
+    background-image: url("../img/illustration-1.jpg");
+    background-repeat: no-repeat;
+    width: 300px;
+    height: 146px;
+}
+
+.features-center .features-image {
+    background-image: url("../img/illustration-2.jpg");
+    background-repeat: no-repeat;
+    width: 300px;
+    height: 146px;
+}
+
+.features-right .features-image {
+    background-image: url("../img/illustration-3.jpg");
+    background-repeat: no-repeat;
+    width: 300px;
+    height: 146px;
+}
