--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,7 @@ a {
 }
 
 .social-btn {
+    position: relative;
     display: inline-block;
     font-size: 0;
     vertical-align: top;
@@ -251,6 +252,33 @@ a {
     background: #e1e1e1;
 }
 
+.social-btn::before {
+    content: "";
+    background-image: url("../img/sprite-nerds.png");
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.social-btn-vk::before {
+    width: 26px;
+    height: 15px;
+    background-position: 0 -331px;
+}
+
+.social-btn-fb::before {
+    width: 12px;
+    height: 22px;
+    background-position: 0 -258px
+}
+
+.social-btn-inst::before {
+    width: 21px;
+    height: 21px;
+    background-position: 0 -295px;
+}
 
 /* catalog */
 
@@ -333,6 +361,165 @@ a {
     background: #f1f1f1;
 }
 
+.content-inner fieldset {
+    border: none;
+    margin: 0;
+    padding: 0;
+    line-height: 20px;
+    font-size: 16px;
+    font-weight: 400;
+    color: #283136;
+}
+
+.content-inner legend {
+    line-height: 30px;
+    font-size: 18px;
+    font-weight: 500;
+    color: #000000;
+}
+
+
+
+input[type="radio"] {
+    display: none;
+}
+
+input[type="radio"] + label {
+    display: block;
+    margin: 10px 0;
+    line-height: 20px;
+    padding-left: 45px;
+    position: relative;
+    cursor: pointer;
+}
+
+input[type="radio"] + label::before {
+    content: "";
+    display: block;
+    width: 16px;
+    height: 16px;
+    border: 4px solid #b8b8b8;
+    border-radius: 20px;
+    background-color: transparent;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+input[type="radio"]:checked + label::after {
+    content: "";
+    display: block;
+    width: 2px;
+    height: 2px;
+    border: 4px solid #b8b8b8;
+    border-radius: 20px;
+    background-color: #b8b8b8;
+    position: absolute;
+    top: 7px;
+    left: 7px;
+}
+
+input[type="radio"]:disabled + label::before {
+    content: "";
+    display: block;
+    width: 16px;
+    height: 16px;
+    border: 4px solid #ededed;
+    border-radius: 20px;
+    background-color: transparent;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+input[type="radio"]:disabled:checked + label::after {
+    content: "";
+    display: block;
+    width: 2px;
+    height: 2px;
+    border: 4px solid #ededed;
+    border-radius: 20px;
+    background-color: #ededed;
+    position: absolute;
+    top: 7px;
+    left: 7px;
+}
+
+input[type="radio"] + label:hover::before {
+    content: "";
+    display: block;
+    width: 16px;
+    height: 16px;
+    border: 4px solid #4d4d4d;
+    border-radius: 20px;
+    background-color: transparent;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+input[type="radio"]:checked + label:hover::after {
+    content: "";
+    display: block;
+    width: 2px;
+    height: 2px;
+    border: 4px solid #4d4d4d;
+    border-radius: 20px;
+    background-color: #4d4d4d;
+    position: absolute;
+    top: 7px;
+    left: 7px;
+}
+
+
+input[type="checkbox"] {
+    display: none;
+}
+
+input[type="checkbox"] + label {
+    display: block;
+    margin: 10px 0;
+    line-height: 20px;
+    padding-left: 42px;
+    position: relative;
+    cursor: pointer;
+}
+
+input[type="checkbox"] + label::before {
+    content: "";
+    width: 22px;
+    height: 22px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: url("../img/sprite-nerds.png");
+    background-repeat: no-repeat;
+    background-position: 0 -30px;
+}
+
+input[type="checkbox"]:checked + label::before {
+    width: 27px;
+    background-position: 0 -144px;
+}
+
+input[type="checkbox"]:disabled + label::before {
+    background-position: 0 -68px;
+}
+
+input[type="checkbox"]:disabled:checked + label::before {
+    width: 27px;
+    background-position: 0 -182px;
+}
+
+input[type="checkbox"] + label:hover::before {
+    background-position: 0 -106px;
+}
+
+input[type="checkbox"]:checked + label:hover::before {
+    width: 27px;
+    background-position: 0 -220px;
+}
+
 .sort {
     display: flex;
     flex-direction: row;
@@ -402,6 +589,11 @@ a {
     justify-content: space-between;
 }
 
+.item {
+    border-top: 30px solid #f1f1f1;
+    border-radius: 3px;
+}
+
 .item-description {
     display: none;
 }
@@ -434,7 +626,9 @@ a {
     font-weight: 500;
 }
 
-.basket {
+.cart {
+    position: relative;
+    display: inline-block;
     font-size: 16px;
     line-height: 30px;
     font-weight: 500;
@@ -442,6 +636,17 @@ a {
     margin-left: 110px;
     padding-left: 60px;
     padding-top: 25px;
+}
+
+.cart::before{
+    content: "";
+    position: absolute;
+    top: 33px;
+    left: 20px;
+    width: 15px;
+    height: 15px;
+    background: url(../img/sprite-nerds.png) no-repeat;
+    background-position: 0 0;
 }
 
 
