--- a/css/style.css
+++ b/css/style.css
@@ -24,13 +24,6 @@ a {
     text-decoration: none;
 }
 
-.navigation-list {
-    text-decoration: none;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
 .main-header .wrap {
     display: flex;
     flex-direction: row;
@@ -39,8 +32,14 @@ a {
 .navigation-list {
     display: flex;
     flex-direction: row;
-    width: 500px;
     justify-content: space-between;
+    text-decoration: none;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    width: 440px;
+    padding-left: 201px;
+    padding-top: 25px;
 }
 
 .main-navigation {
@@ -86,8 +85,9 @@ a {
 .slider {
     position: relative;
     width: 1200px;
-    height: 423px;
+    height: 376px;
     margin: 0 auto;
+    z-index: 1;
 }
 
 .slider input[type=radio] {
@@ -131,11 +131,12 @@ a {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    z-index: 2;
 }
 
 .slide-text {
     width: 380px;
-    padding: 30px 0;
+    padding: 23px 0;
     color: #283136;
 }
 
@@ -149,9 +150,10 @@ a {
 .slide .btn {
     display: block;
     width: 240px;
-    padding: 10px 0;
-    margin-top: 25px;
-    font-size: 12px;
+    padding: 16px 0;
+    margin-top: 39px;
+    line-height: 18px;
+    font-size: 16px;
     color: white;
     text-transform: uppercase;
     text-align: center;
@@ -174,7 +176,7 @@ a {
 .slide:nth-child(1) {
     background-image: url("../img/slide1.png");
     background-repeat: no-repeat;
-    background-position: 100% 10px;
+    background-position: 93% -37px;
     padding-bottom: 100px;
     width: 100%;
 }
@@ -182,7 +184,7 @@ a {
 .slide:nth-child(2) {
     background-image: url("../img/slide2.png");
     background-repeat: no-repeat;
-    background-position: 100% 10px;
+    background-position: 100% -54px;
     padding-bottom: 100px;
     width: 100%;
 }
@@ -190,7 +192,7 @@ a {
 .slide:nth-child(3) {
     background-image: url("../img/slide3.png");
     background-repeat: no-repeat;
-    background-position: 100% 0;
+    background-position: 100% -35px;
     padding-bottom: 100px;
     width: 100%;
 }
@@ -216,6 +218,7 @@ a {
     flex-direction: row;
     justify-content: space-between;
     border-bottom: solid #eeeeee 2px;
+    width: 1100px;
 }
 
 .index-info .wrap {
@@ -779,11 +782,7 @@ input[type="checkbox"]:checked + label:hover::before {
 
 .main-header {
     background-color: #eeeeee;
-}
-
-.navigation-list {
-    padding-left: 60px;
-    padding-top: 25px;
+    padding-top: 50px;
 }
 
 .navigation-item a {
@@ -791,6 +790,7 @@ input[type="checkbox"]:checked + label:hover::before {
     font-size: 16px;
     line-height: 30px;
     font-weight: 500;
+    text-transform: uppercase;
 }
 
 .navigation-item a:hover {
@@ -809,7 +809,8 @@ input[type="checkbox"]:checked + label:hover::before {
     line-height: 30px;
     font-weight: 500;
     color: #000000;
-    margin-left: 110px;
+    text-transform: uppercase;
+    margin-left: 224px;
     padding-left: 60px;
     padding-top: 25px;
 }
@@ -844,6 +845,7 @@ input[type="checkbox"]:checked + label:hover::before {
 .promo {
     background-color: #eeeeee;
     padding-top: 50px;
+    margin-bottom: 80px;
 }
 
 .slide-title {
@@ -858,7 +860,9 @@ input[type="checkbox"]:checked + label:hover::before {
     line-height: 24px;
     font-weight: 400;
     width: 410px;
+    padding-top: 10px;
 }
+
 
 .features-description {
     width: 260px;
