--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ a {
     display: block;
     width: 240px;
     padding: 16px 0;
-    margin-top: 39px;
+    margin-top: 41px;
     line-height: 18px;
     font-size: 16px;
     color: white;
@@ -213,12 +213,17 @@ a {
     display: block;
 }
 
+.features {
+    margin-left: -60px;
+}
+
 .features .wrap {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     border-bottom: solid #eeeeee 2px;
     width: 1100px;
+    padding-bottom: 80px;
 }
 
 .index-info .wrap {
@@ -873,6 +878,7 @@ input[type="checkbox"]:checked + label:hover::before {
     font-size: 24px;
     font-weight: 500;
     text-transform: uppercase;
+    margin-bottom: 16px;
 }
 
 .features-description p {
@@ -914,9 +920,10 @@ input[type="checkbox"]:checked + label:hover::before {
 .features-description .btn {
     display: block;
     width: 160px;
-    padding: 10px 0;
-    margin-top: 25px;
-    font-size: 12px;
+    padding: 16px 0;
+    margin-top: 34px;
+    line-height: 18px;
+    font-size: 16px;
     color: white;
     text-transform: uppercase;
     text-align: center;
