--- a/css/style.css
+++ b/css/style.css
@@ -213,17 +213,13 @@ a {
     display: block;
 }
 
-.features {
-    margin-left: -60px;
-}
-
 .features .wrap {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     border-bottom: solid #eeeeee 2px;
-    width: 1100px;
+    width: 1160px;
     padding-bottom: 80px;
+    margin-bottom: 37px;
 }
 
 .index-info .wrap {
@@ -291,6 +287,11 @@ a {
 
 .partner-logo:active {
     opacity: 0.1;
+}
+
+.partners-logos .wrap {
+    margin-bottom: 100px;
+    border-bottom: none;
 }
 
 .main-footer .wrap {
@@ -888,6 +889,7 @@ input[type="checkbox"]:checked + label:hover::before {
 }
 
 .features-left {
+    margin-right: 100px;
 }
 
 .features-left::before {
@@ -897,6 +899,10 @@ input[type="checkbox"]:checked + label:hover::before {
     background-repeat: no-repeat;
     width: 300px;
     height: 146px;
+}
+
+.features-center {
+    margin-right: 100px;
 }
 
 .features-center::before {
@@ -981,6 +987,7 @@ input[type="checkbox"]:checked + label:hover::before {
     line-height: 45px;
     font-size: 45px;
     font-weight: 500;
+    margin-bottom: 33px;
 }
 
 .index-info-description p {
@@ -994,10 +1001,6 @@ input[type="checkbox"]:checked + label:hover::before {
     margin: 0;
 }
 
-.index-info-description li {
-    padding-left: 40px;
-    position: relative;
-}
 
 .index-info-description li::before {
     position: absolute;
@@ -1010,37 +1013,54 @@ input[type="checkbox"]:checked + label:hover::before {
 }
 
 .index-info-title {
+    display: block;
     line-height: 24px;
     font-size: 16px;
     font-weight: 500;
     text-transform: uppercase;
+    margin-top: 38px;
 }
 
 .index-info-description ul {
     list-style: none;
+    margin-top: 24px;
 }
 
 .index-info-description li {
     line-height: 24px;
     font-size: 16px;
     font-weight: 400;
+    padding-left: 36px;
+    position: relative;
+    margin-bottom: 25px;
 }
 
 .stat-title {
+    display: block;
     line-height: 24px;
     font-size: 16px;
     font-weight: 400;
     text-transform: uppercase;
+    margin-top: 38px;
+    margin-bottom: 41px;
+    padding-left: 17px;
 }
 
 .stat-percent {
+    display: block;
     line-height: 45px;
     font-size: 45px;
     font-weight: 500;
+    margin-right: 18px;
+    margin-bottom: 19px;
+}
+
+sup {
+    top: -0.4em;
 }
 
 .stat-description {
-    line-height: 22px;
+    line-height: 18px;
     font-size: 16px;
     font-weight: 400;
     color: #444444;
