--- a/css/style.css
+++ b/css/style.css
@@ -458,6 +458,7 @@ a {
 .range-filter {
     width: 260px;
     margin-top: 48px;
+    margin-bottom: 58px;
 }
 
 .range-controls {
@@ -496,11 +497,11 @@ a {
 }
 
 .range-controls .toggle-min {
-    left: 50px;
+    left: 18px;
 }
 
 .range-controls .toggle-max {
-    left: 110px;
+    left: 160px;
 }
 
 .price-controls {
@@ -508,7 +509,7 @@ a {
 }
 
 .price-controls label {
-    font-size: 16px;
+    font-size: 18px;
     display: inline-block;
     width: 50%;
 }
@@ -554,12 +555,14 @@ input[type="radio"] {
 }
 
 input[type="radio"] + label {
+    position: relative;
     display: block;
+    cursor: pointer;
     margin: 10px 0;
     line-height: 20px;
-    padding-left: 45px;
-    position: relative;
-    cursor: pointer;
+    padding-left: 36px;
+    padding-top: 5px;
+    margin-bottom: 16px;
 }
 
 input[type="radio"] + label::before {
@@ -640,6 +643,10 @@ input[type="radio"]:checked + label:hover::after {
     left: 7px;
 }
 
+.left-column .filters-radio {
+    margin-bottom: 27px
+}
+
 input[type="checkbox"] {
     display: none;
 }
@@ -655,7 +662,7 @@ input[type="checkbox"] + label {
 
 input[type="checkbox"] + label::before {
     content: "";
-    width: 22px;
+    width: 24px;
     height: 22px;
     position: absolute;
     top: 0;
